objects/Interviewer__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Interviewer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Interviewer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Interviewers</relationshipLabel>
        <relationshipName>Interviewers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Managerial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>no_of_Interviewer__c</fullName>
        <label>no_of_Interviewer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Interviewer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interviewer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>